--- a/.env
+++ b/.env
@@ -27,6 +27,6 @@ APP_SECRET=c1cdcd0a21a1ffeee4c1dc26b5fe228b
 # IMPORTANT: DATABASE_URL *must* define the server version
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://SaynMarvin:bonsoir@127.0.0.1:3306/marche_conclu?serverVersion=8.0"
+DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=8.0"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
