--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@symfony/stimulus-bridge": "^2.0.0",
     "@symfony/webpack-encore": "^1.0.0",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.0.0",
     "eslint": "^8.4.0",
     "eslint-config-airbnb": "^19.0.2",
@@ -9,7 +10,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.1",
     "file-loader": "^6.0.0",
-    "regenerator-runtime": "^0.13.2",
+    "regenerator-runtime": "^0.13.9",
     "sass": "^1.44.0",
     "sass-lint": "^1.13.1",
     "sass-loader": "^12.0.0",
