--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,6 +22,8 @@ security:
                 # "login" is the name of the route created previously
                 login_path: login
                 check_path: login
+            logout:
+                path: app_logout
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -33,4 +35,4 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+          - { path: ^/user/profile, roles: ROLE_USER }
