--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -1,9 +1,11 @@
+# config/packages/vich_uploader.yaml
 vich_uploader:
-    db_driver: orm
-    mappings:
-            photos_file:
-                    # alias qui nous permet d'accéder à nos images depuis le navigateur
-                    uri_prefix: /uploads
-                    # Chemin vers le dossier de stockage
-                    upload_destination: '%upload_directory%'
-                    namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+  db_driver: orm
+
+  mappings:
+    poster_file:
+      # alias qui nous permet d'accéder à nos images depuis le navigateur
+      uri_prefix: /uploads
+      # Chemin vers le dossier de stockage
+      upload_destination: '%upload_directory%'
+      namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
