--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.10",
+        "easycorp/easyadmin-bundle": "3.5",
         "php-flasher/flasher-symfony": "^0.9.6",
         "php-flasher/flasher-toastr-symfony": "^0.9.6",
         "phpdocumentor/reflection-docblock": "^5.3",
