--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "build": "encore production --progress"
   },
   "dependencies": {
-    "@tarekraafat/autocomplete.js": "^10.2.6"
+    "@tarekraafat/autocomplete.js": "^10.2.6",
+    "prop-types": "^15.8.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
